# mofe-judge-docker

./: .env.sample  .gitignore  .hadolint.yaml  Cargo.toml  Dockerfile  README.md  Rocket.toml  compile_request.json  default.cf  docker-compose.yaml  judge_request.json  test.sh
src/: api.rs  checker.rs  command.rs  config.rs  gcp.rs  main.rs  model.rs  models.rs
src/api/: compilation.rs  compile.rs  download.rs  judge.rs
src/api/judge/: scoring.rs  sender.rs
src/sandbox/: execute_config.rs  meta.rs  mod.rs
tests/: download_request.json  test.sh
